frontend/assets/css/main.css
/* ... */
@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.text-no-transform {
    text-transform: none !important;
}

/* transparent subtle scrollbar */
::-webkit-scrollbar {
  width: 0.2em;
  background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb {
  background-color: rgba(0,0,0,.2);
}

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
  background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #9B9B9B;
}

.scroll-bg::-webkit-scrollbar {
  width: 0.5rem;
}

.scroll-bg::-webkit-scrollbar-thumb {
  border-radius: 0.25rem;
  @apply bg-muted;
}

.markdown > :first-child {
  margin-top: 0px !important;
}

.markdown :where(p, ul, ol, dl, blockquote, h1, h2, h3, h4, h5, h6) {
  margin-top: var(--y-gap);
  margin-bottom: var(--y-gap);
}

.markdown :where(ul) {
  list-style: disc;
  margin-left: 2rem;
}

.markdown :where(ol) {
  list-style: decimal;
  margin-left: 2rem;
}
/* Heading Styles */
.markdown :where(h1) {
  font-size: 2rem;
  font-weight: 700;
}

.markdown :where(h2) {
  font-size: 1.5rem;
  font-weight: 700;
}

.markdown :where(h3) {
  font-size: 1.25rem;
  font-weight: 700;
}

.markdown :where(h4) {
  font-size: 1rem;
  font-weight: 700;
}

.markdown :where(h5) {
  font-size: 0.875rem;
  font-weight: 700;
}

.markdown :where(h6) {
  font-size: 0.75rem;
  font-weight: 700;
}

:root {
  --header-height: 4rem;
  --header-height-mobile: 7rem;
}

